# Rag_python-

./: .env  .gitattributes  .gitignore  README.md  Rag_formain.py  dataload.py  multimodal_embedder.py  pyproject.toml
rag/: config.py  main.py  requirements.txt  something.txt
rag/rag_modules/: generation_integration.py  index_construction.py  retrieval_optimization.py
rag/raw_data/: shanghai.md
rag/structure/: Rag_list.excalidraw  file.md
rag/vector_index/: index.faiss  index.pkl
rag_graph/: .dockerignore  .env  .env.example  DOCKER_README.md  Dockerfile  cli.py  docker-compose.yml  main.py  requirement.txt
rag_graph/neo4j_data/: README.md  attractions.csv  cities.csv  festivals.csv  foods.csv  hotels.csv  import_data.cypher  query_examples.cypher  relationships.csv  restaurants.csv  specialties.csv  subregions.csv
rag_graph/rag_modules/: __init__.py  generation_integration.py  graph_data_preparation.py  graph_indexing.py  graph_rag_retrieval.py  hybrid_retrieval.py  intelligent_query_touter.py  milvus_index_construction.py
rag_graph/test_file/commom/: 20251202.md
rag_graph/test_file/special/: 20251202.md
rag_graph/ui/: __init__.py  logo.py  repl.py  spinner.py  theme.py
rag_graph/volumes/milvus/rdb_data/: LOG
rag_graph/volumes/milvus/rdb_data_meta_kv/: LOG
rag_graph/volumes/minio/.minio.sys/tmp/.trash/260b0db7-321e-45b2-995f-c0a488991206/: xl.meta.bkp
rag_graph/volumes/minio/.minio.sys/tmp/.trash/2c84872a-7c3e-4cce-8900-32f9df48675e/: xl.meta.bkp
rag_modules/: data_preparation.py  generation_integration.py
(+4 files in other folders)
